--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -264,8 +264,7 @@ Mcu.IP11=RCC
 Mcu.IP12=SDMMC1
 Mcu.IP13=SPI1
 Mcu.IP14=SYS
-Mcu.IP15=USB_DEVICE
-Mcu.IP16=USB_OTG_HS
+Mcu.IP15=USB_OTG_HS
 Mcu.IP2=DEBUG
 Mcu.IP3=DMA
 Mcu.IP4=FATFS
@@ -274,7 +273,7 @@ Mcu.IP6=JPEG
 Mcu.IP7=MDMA
 Mcu.IP8=MEMORYMAP
 Mcu.IP9=NVIC
-Mcu.IPNb=17
+Mcu.IPNb=16
 Mcu.Name=STM32H750VBTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -328,13 +327,12 @@ Mcu.Pin51=PB8
 Mcu.Pin52=VP_FATFS_VS_SDIO
 Mcu.Pin53=VP_JPEG_VS_JPEG
 Mcu.Pin54=VP_SYS_VS_Systick
-Mcu.Pin55=VP_USB_DEVICE_VS_USB_DEVICE_MSC_HS
-Mcu.Pin56=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin55=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin6=PC0
 Mcu.Pin7=PC1
 Mcu.Pin8=PC2_C
 Mcu.Pin9=PC3_C
-Mcu.PinsNb=57
+Mcu.PinsNb=56
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-DISPLAY.3.0.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -405,7 +403,7 @@ NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MDMA_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.OTG_HS_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.OTG_HS_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
@@ -694,8 +692,8 @@ ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_MDMA_Init-MDMA-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,6-MX_JPEG_Init-JPEG-false-HAL-true,7-MX_FATFS_Init-FATFS-false-HAL-false,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_I2S2_Init-I2S2-false-HAL-true,10-MX_QUADSPI_Init-QUADSPI-false-HAL-true,11-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,12-MX_ADC1_Init-ADC1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_2_CYCLE
-QUADSPI.ClockPrescaler=0
-QUADSPI.FifoThreshold=4
+QUADSPI.ClockPrescaler=1
+QUADSPI.FifoThreshold=1
 QUADSPI.FlashSize=23
 QUADSPI.IPParameters=ClockPrescaler,FifoThreshold,SampleShifting,FlashSize,ChipSelectHighTime
 QUADSPI.SampleShifting=QSPI_SAMPLE_SHIFTING_HALFCYCLE
@@ -716,7 +714,7 @@ RCC.D1PPRE=RCC_APB3_DIV2
 RCC.D2PPRE1=RCC_APB1_DIV2
 RCC.D2PPRE2=RCC_APB2_DIV2
 RCC.D3PPRE=RCC_APB4_DIV2
-RCC.DFSDMACLkFreq_Value=192000000
+RCC.DFSDMACLkFreq_Value=480000000
 RCC.DFSDMFreq_Value=120000000
 RCC.DIVM1=5
 RCC.DIVM2=5
@@ -729,18 +727,16 @@ RCC.DIVP2=4
 RCC.DIVP2Freq_Value=100000000
 RCC.DIVP3=1
 RCC.DIVP3Freq_Value=480000000
-RCC.DIVQ1=5
-RCC.DIVQ1Freq_Value=192000000
+RCC.DIVQ1Freq_Value=480000000
 RCC.DIVQ2=4
 RCC.DIVQ2Freq_Value=100000000
-RCC.DIVQ3=1
-RCC.DIVQ3Freq_Value=480000000
+RCC.DIVQ3=8
+RCC.DIVQ3Freq_Value=60000000
 RCC.DIVR1Freq_Value=480000000
-RCC.DIVR2=3
-RCC.DIVR2Freq_Value=133333333.33333333
+RCC.DIVR2Freq_Value=200000000
 RCC.DIVR3Freq_Value=240000000
 RCC.EnbaleCSS=true
-RCC.FDCANFreq_Value=192000000
+RCC.FDCANFreq_Value=480000000
 RCC.FMCFreq_Value=240000000
 RCC.FamilyName=M
 RCC.HCLK3ClockFreq_Value=240000000
@@ -750,12 +746,12 @@ RCC.HRTIMFreq_Value=240000000
 RCC.HSE_VALUE=25000000
 RCC.I2C123Freq_Value=120000000
 RCC.I2C4Freq_Value=120000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2,DIVR2Freq_Value,DIVR3Freq_Value,EnbaleCSS,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1CLockSelection,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL1_VCI_Range-AdvancedSettings,PLL2FRACN,PLL2_VCI_Range-AdvancedSettings,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPICLockSelection,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123CLockSelection,SPI123Freq_Value,SPI45Freq_Value,SPI6CLockSelection,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,EnbaleCSS,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1CLockSelection,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL1_VCI_Range-AdvancedSettings,PLL2FRACN,PLL2_VCI_Range-AdvancedSettings,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPICLockSelection,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMC1CLockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123CLockSelection,SPI123Freq_Value,SPI45Freq_Value,SPI6CLockSelection,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=120000000
 RCC.LPTIM2Freq_Value=120000000
 RCC.LPTIM345Freq_Value=120000000
 RCC.LPUART1CLockSelection=RCC_LPUART1CLKSOURCE_PLL3
-RCC.LPUART1Freq_Value=480000000
+RCC.LPUART1Freq_Value=60000000
 RCC.LTDCFreq_Value=240000000
 RCC.MCO1PinFreq_Value=64000000
 RCC.MCO2PinFreq_Value=480000000
@@ -766,15 +762,16 @@ RCC.PLL3FRACN=0
 RCC.PLLFRACN=0
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.QSPICLockSelection=RCC_QSPICLKSOURCE_PLL2
-RCC.QSPIFreq_Value=133333333.33333333
+RCC.QSPIFreq_Value=200000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=192000000
-RCC.SAI23Freq_Value=192000000
-RCC.SAI4AFreq_Value=192000000
-RCC.SAI4BFreq_Value=192000000
-RCC.SDMMCFreq_Value=192000000
-RCC.SPDIFRXFreq_Value=192000000
+RCC.SAI1Freq_Value=480000000
+RCC.SAI23Freq_Value=480000000
+RCC.SAI4AFreq_Value=480000000
+RCC.SAI4BFreq_Value=480000000
+RCC.SDMMC1CLockSelection=RCC_SDMMCCLKSOURCE_PLL2
+RCC.SDMMCFreq_Value=200000000
+RCC.SPDIFRXFreq_Value=480000000
 RCC.SPI123CLockSelection=RCC_SPI123CLKSOURCE_PLL2
 RCC.SPI123Freq_Value=100000000
 RCC.SPI45Freq_Value=120000000
@@ -788,8 +785,8 @@ RCC.Tim2OutputFreq_Value=240000000
 RCC.TraceFreq_Value=480000000
 RCC.USART16Freq_Value=120000000
 RCC.USART234578Freq_Value=120000000
-RCC.USBCLockSelection=RCC_USBCLKSOURCE_HSI48
-RCC.USBFreq_Value=48000000
+RCC.USBCLockSelection=RCC_USBCLKSOURCE_PLL3
+RCC.USBFreq_Value=60000000
 RCC.VCO1OutputFreq_Value=960000000
 RCC.VCO2OutputFreq_Value=400000000
 RCC.VCO3OutputFreq_Value=480000000
@@ -838,16 +835,9 @@ STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.semaphore=
 STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.solution=PD3
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0_IsPackSelfContextualization=true
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0_SwParameter=DISPLAYCcBoardOoPartJjLCDJjILI9341\:SPI;
-USB_DEVICE.CLASS_NAME_HS=MSC
-USB_DEVICE.IPParameters=VirtualMode-MSC_HS,VirtualModeHS,CLASS_NAME_HS,VID-MSC_HS,MANUFACTURER_STRING-MSC_HS,PID_MSC_HS,PRODUCT_STRING_MSC_HS
-USB_DEVICE.MANUFACTURER_STRING-MSC_HS=0xAA55 Industry
-USB_DEVICE.PID_MSC_HS=2
-USB_DEVICE.PRODUCT_STRING_MSC_HS=Card Reader
-USB_DEVICE.VID-MSC_HS=43605
-USB_DEVICE.VirtualMode-MSC_HS=Msc
-USB_DEVICE.VirtualModeHS=Msc_HS
-USB_OTG_HS.IPParameters=VirtualMode-Device_HS
+USB_OTG_HS.IPParameters=VirtualMode-Device_HS,dma_enable-Device_HS
 USB_OTG_HS.VirtualMode-Device_HS=Device_HS
+USB_OTG_HS.dma_enable-Device_HS=ENABLE
 VP_FATFS_VS_SDIO.Mode=SDIO
 VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
 VP_JPEG_VS_JPEG.Mode=JPEG_Activate
@@ -856,6 +846,4 @@ VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_USB_DEVICE_VS_USB_DEVICE_MSC_HS.Mode=MSC_HS
-VP_USB_DEVICE_VS_USB_DEVICE_MSC_HS.Signal=USB_DEVICE_VS_USB_DEVICE_MSC_HS
 board=custom
